Feature_Engineering 'Population' added

--- a/jupyter_notebooks/ETL.ipynb
+++ b/jupyter_notebooks/ETL.ipynb
@@ -671,6 +671,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Code added to double check missing values after dropping."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check for missing values in critical columns\n",
+        "critical_cols = ['NO2 Mean', 'O3 Mean', 'SO2 Mean', 'CO Mean', 'NO2 AQI', 'O3 AQI', 'SO2 AQI', 'CO AQI']\n",
+        "nan_counts = df[critical_cols].isnull().sum()\n",
+        "print(nan_counts)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {},
