README updates - intro and formatting

--- a/jupyter_notebooks/ETL.ipynb
+++ b/jupyter_notebooks/ETL.ipynb
@@ -164,7 +164,7 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "## Loading the Dataset and Cleaning"
       ]
     },
     {
@@ -781,39 +781,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "uFQo3ycuO-v6"
-      },
-      "source": [
-        "# Section 2"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "NOTE"
+        "## Comclusion and Next Steps"
       ]
     },
     {
