--- a/jupyter_notebooks/EDA2.ipynb
+++ b/jupyter_notebooks/EDA2.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
@@ -1119,7 +1119,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": ".venv (3.12.8)",
       "language": "python",
       "name": "python3"
     },
