correlations between pollutants and AQI updated

--- a/jupyter_notebooks/Feature_Engineering.ipynb
+++ b/jupyter_notebooks/Feature_Engineering.ipynb
@@ -2771,6 +2771,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I will need to get rid of the comma in the \"Population\" column and change the data type to number."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['Population'] = df['Population'].str.replace(',', '').astype(int)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ZY3l0-AxO93d"
       },
