--- a/jupyter_notebooks/Hypothesis2.ipynb
+++ b/jupyter_notebooks/Hypothesis2.ipynb
@@ -17,20 +17,15 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write your notebook objective here, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* To assess hypothesis 2 - weather condition affects pollutant levels\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write down which data or information you need to run the notebook \n",
+        "* The csv file \"pollution_us_2012_2016-population-weather.csv\" \n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* If you have any additional comments that don't fit in the previous bullets, please state them here. \n",
-        "\n"
+        "* Results from hypothesis testing"
       ]
     },
     {
@@ -1247,14 +1242,17 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
+        "# Conclusion and Next Steps"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* In cases where you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
+        "* I have found that each pollutant varies depending on maximum temperature, precipitation and wind speed\n",
+        "* O3, in exception to the other pollutants, increase with increasing temperature and wind speed\n",
+        "* All 4 pollutants decrease with increasing precipitation\n",
+        "* Next, I will investigate hypothesis 3 - pollutant levels follow seasonal patterns"
       ]
     }
   ],
