--- a/jupyter_notebooks/Hypothesis1.ipynb
+++ b/jupyter_notebooks/Hypothesis1.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(EDA)**"
+        "# **Hypothesis 1 - Higher Population Areas have worse Air Quality**"
       ]
     },
     {
@@ -17,19 +17,17 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write your notebook objective here, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* To assess Hypothesis 1 - Higher population areas have worse Air Quality\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write down which data or information you need to run the notebook \n",
+        "* The csv file \"pollution_us_2012_2016-population-weather.csv\"  \n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
+        "* Results from hypothesis testing\n",
         "\n",
-        "## Additional Comments\n",
         "\n",
-        "* If you have any additional comments that don't fit in the previous bullets, please state them here. \n",
         "\n"
       ]
     },
@@ -891,22 +889,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "-mavJ8DibrcQ"
-      },
-      "source": [
-        "# Section 1"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Section 1 content"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "---"
@@ -916,15 +898,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "NOTE"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* You may add as many sections as you want, as long as it supports your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
+        "# **Conclusion**\n",
+        "\n",
+        "- NO₂ AQI had a very high H-statistic and a p-value of 0.000, suggesting strong evidence of a significant difference between at least two population groups.\n",
+        "\n",
+        "- SO₂ AQI also showed a statistically significant difference, though slightly less pronounced.\n",
+        "\n",
+        "- O₃ AQI and CO AQI both had statistically significant results, indicating differences in pollution levels across population categories, but with smaller effect sizes compared to NO₂.\n",
+        "\n",
+        "Overall, these results support the hypothesis that urbanization (higher population) is associated with worse air quality, at least for some pollutants — particularly NO₂, which is commonly linked to vehicle emissions and urban activity."
       ]
     },
     {
