ML - lag and rolling avg features added

--- a/jupyter_notebooks/ML.ipynb
+++ b/jupyter_notebooks/ML.ipynb
@@ -970,6 +970,48 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(20146, 30)\n",
+            "Date coverage for each city:\n",
+            "                   min        max\n",
+            "City                             \n",
+            "Albuquerque 2012-01-01 2015-12-31\n",
+            "Charlotte   2012-01-01 2016-05-31\n",
+            "Concord     2012-01-01 2016-04-30\n",
+            "Dallas      2012-01-01 2016-03-31\n",
+            "Deer Park   2012-01-01 2016-04-30\n",
+            "El Paso     2012-01-01 2016-04-30\n",
+            "Houston     2012-01-01 2016-03-31\n",
+            "New York    2012-01-01 2016-04-30\n",
+            "Oakland     2012-01-01 2016-04-30\n",
+            "San Pablo   2012-01-01 2016-04-30\n",
+            "Victorville 2012-01-01 2016-03-31\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Get the list of cities currently in df_filtered\n",
+        "cities = df_filtered[\"City\"].unique()\n",
+        "\n",
+        "# Compute min and max Date Local for each city\n",
+        "city_coverage = df_filtered.groupby(\"City\")[\"Date Local\"].agg([\"min\", \"max\"])\n",
+        "\n",
+        "# Filter to only the cities in our current set (11 cities)\n",
+        "city_coverage = city_coverage.loc[cities]\n",
+        "\n",
+        "print(df_filtered.shape)\n",
+        "print(\"Date coverage for each city:\")\n",
+        "print(city_coverage)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -981,6 +1023,223 @@
       "metadata": {},
       "source": [
         "## Addition of Lag and Rolling Features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(20003, 35)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>State</th>\n",
+              "      <th>County</th>\n",
+              "      <th>City</th>\n",
+              "      <th>Date Local</th>\n",
+              "      <th>NO2 Mean</th>\n",
+              "      <th>NO2 1st Max Value</th>\n",
+              "      <th>NO2 1st Max Hour</th>\n",
+              "      <th>NO2 AQI</th>\n",
+              "      <th>O3 Mean</th>\n",
+              "      <th>O3 1st Max Value</th>\n",
+              "      <th>O3 1st Max Hour</th>\n",
+              "      <th>O3 AQI</th>\n",
+              "      <th>SO2 Mean</th>\n",
+              "      <th>SO2 1st Max Value</th>\n",
+              "      <th>SO2 1st Max Hour</th>\n",
+              "      <th>SO2 AQI</th>\n",
+              "      <th>CO Mean</th>\n",
+              "      <th>CO 1st Max Value</th>\n",
+              "      <th>CO 1st Max Hour</th>\n",
+              "      <th>CO AQI</th>\n",
+              "      <th>Population</th>\n",
+              "      <th>Latitude</th>\n",
+              "      <th>Longitude</th>\n",
+              "      <th>tmax</th>\n",
+              "      <th>prcp</th>\n",
+              "      <th>wspd</th>\n",
+              "      <th>pres</th>\n",
+              "      <th>Month</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>AQI</th>\n",
+              "      <th>AQI_lag1</th>\n",
+              "      <th>AQI_lag2</th>\n",
+              "      <th>AQI_lag3</th>\n",
+              "      <th>AQI_rolling7</th>\n",
+              "      <th>AQI_7d_ahead</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>New Mexico</td>\n",
+              "      <td>Bernalillo</td>\n",
+              "      <td>Albuquerque</td>\n",
+              "      <td>2012-01-07</td>\n",
+              "      <td>27.116667</td>\n",
+              "      <td>39.1</td>\n",
+              "      <td>20</td>\n",
+              "      <td>37</td>\n",
+              "      <td>0.010500</td>\n",
+              "      <td>0.026</td>\n",
+              "      <td>10</td>\n",
+              "      <td>22</td>\n",
+              "      <td>1.479167</td>\n",
+              "      <td>2.8</td>\n",
+              "      <td>8</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>0.483333</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>1</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>564549</td>\n",
+              "      <td>35.0448</td>\n",
+              "      <td>-106.677</td>\n",
+              "      <td>12.8</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>8.6</td>\n",
+              "      <td>1014.9</td>\n",
+              "      <td>January</td>\n",
+              "      <td>2012</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>49.0</td>\n",
+              "      <td>40.0</td>\n",
+              "      <td>34.0</td>\n",
+              "      <td>39.000000</td>\n",
+              "      <td>39.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>New Mexico</td>\n",
+              "      <td>Bernalillo</td>\n",
+              "      <td>Albuquerque</td>\n",
+              "      <td>2012-01-08</td>\n",
+              "      <td>16.020832</td>\n",
+              "      <td>31.3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>29</td>\n",
+              "      <td>0.016042</td>\n",
+              "      <td>0.029</td>\n",
+              "      <td>12</td>\n",
+              "      <td>25</td>\n",
+              "      <td>0.600000</td>\n",
+              "      <td>1.7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.308333</td>\n",
+              "      <td>0.8</td>\n",
+              "      <td>1</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>564549</td>\n",
+              "      <td>35.0448</td>\n",
+              "      <td>-106.677</td>\n",
+              "      <td>6.1</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>22.3</td>\n",
+              "      <td>1017.3</td>\n",
+              "      <td>January</td>\n",
+              "      <td>2012</td>\n",
+              "      <td>29.0</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>49.0</td>\n",
+              "      <td>40.0</td>\n",
+              "      <td>38.285714</td>\n",
+              "      <td>35.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        State      County         City Date Local   NO2 Mean  \\\n",
+              "0  New Mexico  Bernalillo  Albuquerque 2012-01-07  27.116667   \n",
+              "1  New Mexico  Bernalillo  Albuquerque 2012-01-08  16.020832   \n",
+              "\n",
+              "   NO2 1st Max Value  NO2 1st Max Hour  NO2 AQI   O3 Mean  O3 1st Max Value  \\\n",
+              "0               39.1                20       37  0.010500             0.026   \n",
+              "1               31.3                 0       29  0.016042             0.029   \n",
+              "\n",
+              "   O3 1st Max Hour  O3 AQI  SO2 Mean  SO2 1st Max Value  SO2 1st Max Hour  \\\n",
+              "0               10      22  1.479167                2.8                 8   \n",
+              "1               12      25  0.600000                1.7                 0   \n",
+              "\n",
+              "   SO2 AQI   CO Mean  CO 1st Max Value  CO 1st Max Hour  CO AQI  Population  \\\n",
+              "0      3.0  0.483333               0.7                1     8.0      564549   \n",
+              "1      1.0  0.308333               0.8                1     9.0      564549   \n",
+              "\n",
+              "   Latitude  Longitude  tmax  prcp  wspd    pres    Month  Year   AQI  \\\n",
+              "0   35.0448   -106.677  12.8   0.0   8.6  1014.9  January  2012  37.0   \n",
+              "1   35.0448   -106.677   6.1   0.0  22.3  1017.3  January  2012  29.0   \n",
+              "\n",
+              "   AQI_lag1  AQI_lag2  AQI_lag3  AQI_rolling7  AQI_7d_ahead  \n",
+              "0      49.0      40.0      34.0     39.000000          39.0  \n",
+              "1      37.0      49.0      40.0     38.285714          35.0  "
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Sort by city and date\n",
+        "df_filtered = df_filtered.sort_values([\"City\", \"Date Local\"])\n",
+        "\n",
+        "# Create lag features\n",
+        "for lag in [1, 2, 3]:\n",
+        "    df_filtered[f\"AQI_lag{lag}\"] = df_filtered.groupby(\"City\")[\"AQI\"].shift(lag)\n",
+        "\n",
+        "# 7-day rolling mean of past AQI\n",
+        "df_filtered[\"AQI_rolling7\"] = df_filtered.groupby(\"City\")[\"AQI\"].transform(lambda x: x.rolling(7).mean())\n",
+        "\n",
+        "# 7-day ahead target\n",
+        "df_filtered[\"AQI_7d_ahead\"] = df_filtered.groupby(\"City\")[\"AQI\"].shift(-7)\n",
+        "\n",
+        "# Drop rows with NaN from lags, rolling mean, or 7-day ahead target\n",
+        "df_filtered = df_filtered.dropna(subset=[\"AQI_7d_ahead\", \"AQI_rolling7\", \"AQI_lag1\", \"AQI_lag2\", \"AQI_lag3\"]).reset_index(drop=True)\n",
+        "\n",
+        "print(df_filtered.shape)\n",
+        "df_filtered.head(2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Split into Train and Test Sets"
       ]
     },
     {
@@ -1001,7 +1260,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---"
+        "## Pipeline"
       ]
     },
     {
