ML - train and test split

--- a/jupyter_notebooks/ML.ipynb
+++ b/jupyter_notebooks/ML.ipynb
@@ -1769,7 +1769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1783,20 +1783,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(14880, 28)\n",
+            "(5123, 28)\n"
+          ]
+        }
+      ],
       "source": [
-        "train_df = df_filtered[df_filtered[\"Date Local\"] <= train_end]\n",
-        "test_df  = df_filtered[(df_filtered[\"Date Local\"] >= test_start) & (df_filtered[\"Date Local\"] <= test_end)]"
+        "train_df = df_keep[df_keep[\"Date Local\"] <= train_end]\n",
+        "test_df  = df_keep[(df_keep[\"Date Local\"] >= test_start) & (df_keep[\"Date Local\"] <= test_end)]\n",
+        "\n",
+        "print(train_df.shape)\n",
+        "print(test_df.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "* Train set: (14880, 26) (14880,) \n",
+            "* Test set: (5123, 26) (5123,)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Train: 2012-01-01 to 2014-12-31\n",
+        "X_train = train_df.drop([\"AQI_7d_ahead\", \"Date Local\"], axis=1)\n",
+        "y_train = train_df[\"AQI_7d_ahead\"]\n",
+        "\n",
+        "# Test: 2015-01-01 to 2016-05-31\n",
+        "X_test = test_df.drop([\"AQI_7d_ahead\", \"Date Local\"], axis=1)\n",
+        "y_test = test_df[\"AQI_7d_ahead\"]\n",
+        "\n",
+        "print(\n",
+        "    \"* Train set:\", X_train.shape, y_train.shape,\n",
+        "    \"\\n* Test set:\", X_test.shape, y_test.shape\n",
+        ")"
+      ]
     },
     {
       "cell_type": "markdown",
